<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
       android:id="@+id/nestedScrollView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingLeft="@dimen/dimen10"
       android:paddingRight="@dimen/dimen10"
       tools:context="vn.javis.tourde.activity.login.LoginView">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen60"
        android:layout_marginTop="@dimen/dimen5">
    <TextView
        android:layout_width="@dimen/dimen60"
        android:layout_height="@dimen/dimen45"
        android:gravity="center_horizontal"
        android:text="@string/Back"
        android:layout_marginLeft="@dimen/dimen15"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/dimen25" />
    <TextView
        android:layout_width="@dimen/dimen200"
        android:layout_height="@dimen/dimen45"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginView"
        android:gravity="center_horizontal"
        android:textSize="@dimen/dimen25"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/btn_Close"
        android:layout_width="@dimen/dimen150"
        android:layout_height="@dimen/dimen45"
        android:layout_marginLeft="@dimen/dimen340"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/dimen5"
        android:text="@string/Close"
        android:textColor="@color/colorPrimar"
        android:textSize="@dimen/dimen20"
        android:textStyle="bold" />
</RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen25"
        android:text="@string/LoginGmail"
        android:textSize="@dimen/dimen20"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>
        <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">
      <android.support.design.widget.TextInputEditText
        android:id="@+id/textInputEditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>
<TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen25"
        android:text="@string/PassWord"
        android:textSize="@dimen/dimen20"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>
        <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayoutPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
         android:id="@+id/textInputEditTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_password"
         android:inputType="textPassword"
         android:maxLines="1"
         android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_frame"
            android:layout_marginTop="@dimen/dimen20"
            android:text="@string/text_login"
            android:textAlignment="center" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen35"
            android:layout_marginTop="@dimen/dimen15"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/CreateOne"
            android:textSize="@dimen/dimen20" />

<TextView
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen25"
           android:text="@string/SNS"
           android:textSize="@dimen/dimen20"
           android:textStyle="bold"
           android:layout_marginTop="@dimen/dimen20"
           android:textColor="@color/colorText" />
 <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen60"
           android:layout_marginTop="@dimen/dimen20">
     <ImageView
           android:layout_width="@dimen/dimen60"
           android:layout_height="@dimen/dimen50"
           android:src="@drawable/icon_facebook" />
     <TextView
           android:layout_width="@dimen/dimen280"
           android:layout_height="@dimen/dimen50"
           android:layout_centerHorizontal="true"
           android:text="@string/LoginFacebook"
           android:paddingTop="@dimen/dimen10"
           android:textSize="@dimen/dimen25"
           android:textColor="@color/colorText"/>
     <ImageView
           android:layout_width="wrap_content"
           android:layout_height="@dimen/dimen25"
           android:layout_marginLeft="@dimen/dimen450"
           android:layout_marginTop="@dimen/dimen13"
           android:src="@drawable/icon_continue" /></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginTop="@dimen/dimen20">

          <ImageView
             android:layout_width="@dimen/dimen60"
             android:layout_height="@dimen/dimen50"
              android:src="@drawable/icon_twitter" />
           <TextView
             android:layout_width="@dimen/dimen280"
             android:layout_height="@dimen/dimen50"
             android:layout_centerHorizontal="true"
             android:text="@string/LoginTwitter"
             android:paddingTop="@dimen/dimen10"
             android:textSize="@dimen/dimen25"
             android:textColor="@color/colorText"/>
            <ImageView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dimen25"
             android:layout_marginLeft="@dimen/dimen450"
             android:layout_marginTop="@dimen/dimen13"
              android:src="@drawable/icon_continue" /> </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginTop="@dimen/dimen20">

            <ImageView
              android:layout_width="@dimen/dimen60"
               android:layout_height="@dimen/dimen50"
               android:src="@drawable/icon_google" />
            <TextView
                android:layout_width="@dimen/dimen280"
                android:layout_height="@dimen/dimen50"
                android:layout_centerHorizontal="true"
                android:text="@string/LoginGoogle"
                android:paddingTop="@dimen/dimen10"
                android:textSize="@dimen/dimen25"
                android:textColor="@color/colorText"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen25"
                android:layout_marginLeft="@dimen/dimen450"
                android:layout_marginTop="@dimen/dimen13"
                android:src="@drawable/icon_continue" /></RelativeLayout>
        <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/dimen60"
               android:layout_marginTop="@dimen/dimen20">

            <ImageView
                android:layout_width="@dimen/dimen60"
                android:layout_height="@dimen/dimen50"
                android:src="@drawable/icon_line" />
            <TextView
                android:layout_width="@dimen/dimen280"
                android:layout_height="@dimen/dimen50"
                android:layout_centerHorizontal="true"
                android:text="@string/LoginLine"
                android:paddingTop="10dp"
                android:textSize="@dimen/dimen25"
                android:textColor="@color/colorText"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen25"
                android:layout_marginLeft="@dimen/dimen450"
                android:layout_marginTop="@dimen/dimen13"
                android:src="@drawable/icon_continue" /></RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.design.widget.CoordinatorLayout>
