<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_course_color_title_background"
    tools:context="vn.javis.tourde.activity.BasicInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_course_color_title_background"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47sdp"
            android:background="@color/backgroud">

            <TextView
                android:id="@+id/tv_back_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/Back"
                android:textColor="@color/search_course_color_close_text"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/topic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:text="@string/CreateOne"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_85sdp"
            android:background="@color/backgroud">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_25sdp"
                android:text="@string/text_head"
                android:textColor="@color/Red"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_45sdp"
                android:text="@string/text_headtwo"
                android:textColor="@color/Red"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </RelativeLayout>




        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/search_course_color_title_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/text_forget"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47sdp"
            android:background="@color/backgroud">

            <EditText
                android:id="@+id/edt_emaillogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="@color/backgroud"
                android:hint="@string/hint_email"
                android:textColorHint="@color/Gray"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/backgroud">

            <Button
                android:id="@+id/bt_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/custom_frame"
                android:text="@string/text_button"
                android:textAlignment="center"
                android:textColor="@color/backgroud"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:background="@color/backgroud">
        </RelativeLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
