<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/course_border"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_7sdp"
        android:paddingRight="@dimen/_7sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:minHeight="@dimen/_30sdp">

            <TextView
                android:id="@+id/ic_story_1"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:background="@drawable/blue_circle"
                android:gravity="center"
                android:textColor="@color/White"
                android:textSize="@dimen/_13sdp"
                android:text="@string/first_story_num" />

            <TextView
                android:id="@+id/title_story_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@id/ic_story_1"
                android:layout_centerVertical="true"
                android:text="@string/StoryTitle1"
                android:textColor="@color/Black"
                android:textSize="@dimen/_17sdp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_story_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:scaleType="fitCenter"
            android:drawingCacheQuality="low"
            android:src="@drawable/image1" />

        <TextView
            android:id="@+id/story_1_image_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Story1ImageDes"
            android:textColor="@color/Black"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/SkyBlue" />

        <TextView
            android:id="@+id/content_story_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Story1Content"
            android:textColor="@color/Black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tag_story_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/Story1Tag"
            android:textColor="@color/SkyBlue"
            android:textSize="@dimen/_11sdp" />

        <ImageView
            android:id="@+id/btn_spot_images"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/bt_view_more" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_distance_between_spot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        >

        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_gravity="center"
            android:background="@color/strong_gray"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/image_description"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/icon_bicycle_blue" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_length"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:text="@string/distance_story"
                android:textColor="@color/SkyBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_gravity="center"
            android:background="@color/strong_gray"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>
