<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/image1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/course_detail_phrase_detail"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">
        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:src="@drawable/icon_smile" />
        <TextView
            android:layout_width="308dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_toEndOf="@+id/img"
            android:gravity="start|center"
            android:text="@string/TextUsername" />
        <TextView
            android:id="@+id/running"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:background="@drawable/running_now"
            android:layout_alignParentEnd="true"
            android:text="@string/running_now"/>

    </RelativeLayout>
</LinearLayout>